<resources>
    <string name="app_name">Dagit</string>
    <string name="action_settings">Settings</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_title">Code Plateau Phase 2</string>
    <string name="ht_surname">Surname</string>
    <string name="ht_othernames">Othernames</string>
    <string name="ht_date">dd/mm/yy</string>
    <string name="tv_male">Male</string>
    <string name="tv_female">Female</string>
    <string name="tv_email">Email</string>
    <string name="tv_phone">Phone number</string>
    <string name="tv_register">Register</string>
    <string-array name="states">
        <item>Plateau</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
